@@ -38,7 +38,7 @@
 ATF_TEST_CASE_WITHOUT_HEAD(connect);
 ATF_TEST_CASE_BODY(connect)
 {
-    lua_State* raw_state = lua_open();
+    lua_State* raw_state = luaL_newstate();
     ATF_REQUIRE(raw_state != NULL);
 
     {
